# Bouncer-AI

./: .gitignore  BOUNCER_IMPLEMENTATION_PLAN.md  README.md  bouncer_report_20260308_151049.html  bouncer_report_20260308_171633.html  bouncer_report_20260308_172242.html  bouncer_report_20260308_172818.html  bouncer_report_20260308_173606.html  bouncer_report_20260308_174258.html  bouncer_wireframe.html  pyproject.toml
bouncer/: __init__.py  cli.py  config.py
bouncer/agent/: graph.py  state.py
bouncer/agent/nodes/: classify.py  cross_reference.py  extract.py  report.py  tag.py
bouncer/agent/tools/: __init__.py  peek_file.py  read_csv.py  read_eds.py  read_fcs.py  read_json.py  read_pdf.py  read_yaml.py
bouncer/models/: finding.py  provenance.py
bouncer/qc/: design_checker.py  metric_checker.py  schema_validator.py
bouncer/store/: builder.py  pull.py  registry.py  transforms.py
bouncer/utils/: hashing.py  logger.py  version.py
infra/: modal_app.py
schemas/: template-qc.yaml  template-schema.yaml
schemas/qPCR/: basic-qc.yaml  basic-schema.yaml
schemas/rna-seq/: basic-qc.yaml  basic-schema.yaml
scripts/: install.ps1  install.sh  run_qpcr_correct.sh  run_rna_seq.bat  run_rna_seq.sh  run_rna_seq_incorrect.sh
